# totosca

./: Cargo.toml  LICENSE  README.md  TODO.md
crates/tosca_parser/: Cargo.toml
crates/tosca_parser/src/: grammar.rs  ir.rs  lib.rs  parse.rs
crates/tosca_parser/src/grammar/: attribute.rs  data.rs  file.rs  import.rs  list.rs  map.rs  node.rs  parameter.rs  property.rs  requirement.rs  schema.rs  service_template.rs  value.rs
crates/tosca_parser/src/tests/: file.yaml
crates/tosca_parser_macros/: Cargo.toml
crates/tosca_parser_macros/src/: lib.rs
crates/toto_ast/: Cargo.toml
crates/toto_ast/src/: lib.rs
crates/toto_cli/: Cargo.toml
crates/toto_cli/src/: main.rs
crates/toto_editor/: Cargo.toml  index.html
crates/toto_editor/src/: app.rs
crates/toto_editor/src/pages/documentation/: doc_root.rs  mod.rs
crates/toto_lsp/: Cargo.toml
crates/toto_lsp/src/: lib.rs  main.rs  models.rs  server.rs
crates/toto_lsp/src/capabilities/: complete.rs  diagnostics.rs  find_usages.rs  goto_definition.rs  mod.rs
crates/toto_parser/: Cargo.toml
crates/toto_parser/src/: collection.rs  error.rs  field.rs  grammar.rs  lib.rs  list.rs  parse.rs  schema.rs
crates/toto_parser/src/grammar/: mod.rs
crates/toto_parser/src/grammar/tosca/: mod.rs
crates/toto_parser/src/grammar/tosca/v1_3/: attribute.rs  mod.rs
crates/toto_parser/src/grammar/tosca/v2_0/: attribute.rs  collection.rs  data.rs  file.rs  import.rs  list.rs  map.rs  mod.rs  node.rs  parameter.rs  property.rs  requirement.rs  schema.rs  service_template.rs  value.rs
crates/toto_parser/src/tests/: file.yaml  file.yaml.j2  tosca_1_3.yaml  tosca_2_0.yaml
crates/toto_parser/src/tosca/: ast.rs  mod.rs
crates/toto_parser/src/tosca/v1_3/: attribute.rs  file.rs  mod.rs  value.rs
crates/toto_parser/src/tosca/v2_0/: attribute.rs  collection.rs  data.rs  file.rs  import.rs  list.rs  map.rs  mod.rs  node.rs  parameter.rs  property.rs  reference.rs  requirement.rs  schema.rs  service_template.rs  value.rs
crates/toto_parser/src/yaml/: mod.rs  value.rs
crates/toto_semantic/: Cargo.toml
crates/toto_semantic/src/: lib.rs
crates/toto_tosca/: Cargo.toml
crates/toto_tosca/src/: lib.rs  models.rs
crates/toto_tosca/src/grammar/: collection.rs  field.rs  field_ref.rs  hierarchy.rs  list.rs  mod.rs  parser.rs
crates/toto_tosca/src/grammar/v1_3/: artifact.rs  capability.rs  data.rs  file.rs  import.rs  mod.rs  relationship.rs  requirement.rs  substitution_mapping.rs
crates/toto_tosca/src/grammar/v2_0/: artifact.rs  capability.rs  data.rs  file.rs  function.rs  group.rs  import.rs  interface.rs  mod.rs  node.rs  notification.rs  operation.rs  policy.rs  relationship.rs  repository.rs  requirement.rs  service_template.rs  substitution_mapping.rs  value.rs  workflow.rs
crates/toto_tosca/src/semantic/: derivation.rs  derive.rs  errors.rs  hierarchy.rs  import.rs  lookup.rs  mod.rs
crates/toto_yaml/: Cargo.toml
crates/toto_yaml/src/: lib.rs
docs/: code-reuse-in-grammars.md  error-reporting.md  grammar-versioning.md
integrations/nvim/: README.md
integrations/nvim/lua/totosca/: init.lua
integrations/vscode/: README.md  package.json  pnpm-lock.yaml
integrations/vscode/src/: extension.ts
tests/: .toto-ast.dot  a.yaml  b.yaml  f.yaml  file.yaml  tosca_1_3.yaml  tosca_1_3_b.yaml  tosca_2_0.yaml  tosca_2_0.yaml.j2
tests/profiles/profile/: types_1.yaml  types_2.yaml
