[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["Mikhail Shishatskiy <shishqa.main@gmail.com>"]
license = "GPL3"

[workspace.dependencies]
anyhow = "1.0.71"
ariadne = "0.4.0"
petgraph = "0.6.4"
serde = "1.0.195"
serde_json = "1.0.111"
graphviz-rust = "0.7.0"
ordered-float = "4.2.0"
once_cell = "1.19.0"
url = "2.5.0"
yaml-peg = { version = "1.0.5", features = ["serde"] }
derive_more = "0.99.17"
