[package]
name = "tosca_parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.162", features = ["derive"] }
toml = "0.7.6"
url = { version = "2.4.0", features = ["serde"] }
yaml-peg = { version = "1.0.5", features = ["serde"] }
