[package]
name = "toto_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphviz-rust = "0.7.0"
lsp-positions = "0.3.2"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
petgraph = "0.6.4"
serde = "1.0.195"
serde_json = "1.0.111"
toto_parser = { path = "../toto_parser" }
