[package]
name = "toto_lsp"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
graphviz-rust.workspace = true
petgraph.workspace = true
url.workspace = true
derive_more.workspace = true
lsp-positions = "0.3.2"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
toto_ast = { path = "../toto_ast" }
toto_yaml = { path = "../toto_yaml" }
toto_parser = { path = "../toto_parser" }
toto_tosca = { path = "../toto_tosca" }
