[package]
name = "toto_parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
petgraph = "0.6.3"
serde = { version = "1.0.162", features = ["derive"] }
toml = "0.7.6"
yaml-peg = { version = "1.0.5", features = ["serde"] }
toto_tosca = { path = "../toto_tosca" }
ariadne = "0.4.0"
ordered-float = "4.2.0"
once_cell = "1.19.0"
url = "2.5.0"
