[package]
name = "toto_parser"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
petgraph.workspace = true
serde.workspace = true
ordered-float.workspace = true
once_cell.workspace = true
url.workspace = true
yaml-peg.workspace = true
toto_tosca = { path = "../toto_tosca" }
toto_ast = { path = "../toto_ast" }
toto_yaml = { path = "../toto_yaml" }

[dev-dependencies]
ariadne.workspace = true
