[package]
name = "toto_tosca"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "4.2.0"
petgraph = "0.6.4"
petgraph-gen = "0.1.3"
rand = { version = "0.8.5", features = ["small_rng"] }
