[package]
name = "toto_yaml"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
petgraph.workspace = true
yaml-peg.workspace = true
ordered-float.workspace = true
url.workspace = true
derive_more.workspace = true
toto_ast = { path = "../toto_ast" }
